src/objects/APXTConga4__Conga_Template__c.object
<CustomObject>
    <description>Template manager for use with Conga Composer and Conga Mail Merge.</description>
    <fields>
        <fullName>APXTConga4__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Label_Template_Use_Detail_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Conga Mail Merge Label Templates Only.  This setting indicates to use ReportData (or QueryData) as the data source for Labels</inlineHelpText>
        <label>Label Template: Use Detail Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Master_Field_to_Set_1__c</fullName>
        <description>You may update a field on the master record. The update occurs when the user Logs Activity, either from PointMerge or Mass Merge. 

Enter the API field name, an equals sign, and the value to set (with spaces replaced with plus signs). 

For example: 
Status__c=Completed 

A special case: 
Status_Date__c=Today</description>
        <inlineHelpText>Enter the API field name, an equals sign, and the value to set (with spaces replaced with plus signs). 

Examples: 
Status__c=Completed 
Status_Date__c=Today 
Stage__c=In Progress</inlineHelpText>
        <label>Master Field to Set 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Master_Field_to_Set_2__c</fullName>
        <label>Master Field to Set 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Master_Field_to_Set_3__c</fullName>
        <label>Master Field to Set 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Template_Group__c</fullName>
        <inlineHelpText>Identify the group name to which this template belongs. Used in conjunction with the &quot;&amp;TemplateGroup=&quot; parameter in PointMerge.</inlineHelpText>
        <label>Template Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Template_Type__c</fullName>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                    <default>true</default>
                    <label>Document</label>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>Envelope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>365</fullName>
                </value>
                <value>
                    <fullName>7 OClock</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Amosan</fullName>
                </value>
                <value>
                    <fullName>Ariel</fullName>
                </value>
                <value>
                    <fullName>Bellady</fullName>
                </value>
                <value>
                    <fullName>Blue II</fullName>
                </value>
                <value>
                    <fullName>Bonus</fullName>
                </value>
                <value>
                    <fullName>Bounce</fullName>
                </value>
                <value>
                    <fullName>Bounty</fullName>
                </value>
                <value>
                    <fullName>Braun</fullName>
                </value>
                <value>
                    <fullName>California Natural</fullName>
                </value>
                <value>
                    <fullName>Charmin</fullName>
                </value>
                <value>
                    <fullName>Cheer</fullName>
                </value>
                <value>
                    <fullName>Clinicare</fullName>
                </value>
                <value>
                    <fullName>Color Natural</fullName>
                </value>
                <value>
                    <fullName>Color On</fullName>
                </value>
                <value>
                    <fullName>Color Up</fullName>
                </value>
                <value>
                    <fullName>Contour</fullName>
                </value>
                <value>
                    <fullName>CoverGirl</fullName>
                </value>
                <value>
                    <fullName>CPI</fullName>
                </value>
                <value>
                    <fullName>Crest</fullName>
                </value>
                <value>
                    <fullName>Dash</fullName>
                </value>
                <value>
                    <fullName>Dawn</fullName>
                </value>
                <value>
                    <fullName>Daz</fullName>
                </value>
                <value>
                    <fullName>Decore</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Dinamo-Dynamo</fullName>
                </value>
                <value>
                    <fullName>Downy</fullName>
                </value>
                <value>
                    <fullName>Dreft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Health Effects</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Type__c</fullName>
        <label>Comment Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Complaints Other</fullName>
                </value>
                <value>
                    <fullName>Disponibilidade</fullName>
                </value>
                <value>
                    <fullName>Evento adverso</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Outras reclamações</fullName>
                </value>
                <value>
                    <fullName>Pergunta</fullName>
                </value>
                <value>
                    <fullName>Product Quality Complaint</fullName>
                </value>
                <value>
                    <fullName>Reclamação da qualidade do produto</fullName>
                </value>
                <value>
                    <fullName>Testemunho</fullName>
                </value>
                <value>
                    <fullName>Testimonial</fullName>
                </value>
                <value>
                    <fullName>Запрос</fullName>
                </value>
                <value>
                    <fullName>Наличие</fullName>
                </value>
                <value>
                    <fullName>Нежелательное явление</fullName>
                </value>
                <value>
                    <fullName>Отзыв</fullName>
                </value>
                <value>
                    <fullName>Претензия к качеству продукта</fullName>
                </value>
                <value>
                    <fullName>Прочие претензии</fullName>
                </value>
                <value>
                    <fullName>不良事件</fullName>
                </value>
                <value>
                    <fullName>产品质量投诉</fullName>
                </value>
                <value>
                    <fullName>其他投訴</fullName>
                </value>
                <value>
                    <fullName>可提供性</fullName>
                </value>
                <value>
                    <fullName>投诉其他</fullName>
                </value>
                <value>
                    <fullName>有效性</fullName>
                </value>
                <value>
                    <fullName>產品品質投訴</fullName>
                </value>
                <value>
                    <fullName>見證</fullName>
                </value>
                <value>
                    <fullName>詢問</fullName>
                </value>
                <value>
                    <fullName>询问</fullName>
                </value>
                <value>
                    <fullName>鉴定书</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Center__c</fullName>
        <label>Contact Center</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMR NA</fullName>
                </value>
                <value>
                    <fullName>AMR NA CVG</fullName>
                </value>
                <value>
                    <fullName>AMR NA SY</fullName>
                </value>
                <value>
                    <fullName>AMR WST</fullName>
                </value>
                <value>
                    <fullName>China P&amp;G</fullName>
                </value>
                <value>
                    <fullName>China Sykes</fullName>
                </value>
                <value>
                    <fullName>China TCI</fullName>
                </value>
                <value>
                    <fullName>DEM</fullName>
                </value>
                <value>
                    <fullName>DEM SY Promotion</fullName>
                </value>
                <value>
                    <fullName>DEM SY Wihelmshaven</fullName>
                </value>
                <value>
                    <fullName>EGC P&amp;G Cairo</fullName>
                </value>
                <value>
                    <fullName>GBE SY Edinburgh</fullName>
                </value>
                <value>
                    <fullName>GBG TP Gateshead</fullName>
                </value>
                <value>
                    <fullName>GBG TP Promotion</fullName>
                </value>
                <value>
                    <fullName>GBN P&amp;G Newcastle</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>HUB SY Budapest</fullName>
                </value>
                <value>
                    <fullName>ILT Consumer Service Israel</fullName>
                </value>
                <value>
                    <fullName>ITP SY Prato</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>KSJ DMS Jeddah</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>NLT Teleperformance Tilburg</fullName>
                </value>
                <value>
                    <fullName>PKK EN Karachi</fullName>
                </value>
                <value>
                    <fullName>PLW P&amp;G Warsaw</fullName>
                </value>
                <value>
                    <fullName>ROB P&amp;G Bucharest</fullName>
                </value>
                <value>
                    <fullName>RUM P&amp;G Moscow</fullName>
                </value>
                <value>
                    <fullName>SAJ Sykes Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Contact Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Template_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Template Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Followup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not sure this custom field is needed, it is referenced in fulfillment, but does not appear to be used there. if not needed, remove from fulfillment class</description>
        <label>Followup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HTML_Content__c</fullName>
        <description>Used by Fulfillment</description>
        <label>HTML Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Kazakh</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>malay</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovakian</fullName>
                </value>
                <value>
                    <fullName>Slovenian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_Area__c</fullName>
        <label>Major Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quick_Code__c</fullName>
        <label>Quick Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3007</fullName>
                </value>
                <value>
                    <fullName>5177</fullName>
                </value>
                <value>
                    <fullName>5178</fullName>
                </value>
                <value>
                    <fullName>5179</fullName>
                </value>
                <value>
                    <fullName>5180</fullName>
                </value>
                <value>
                    <fullName>5181</fullName>
                </value>
                <value>
                    <fullName>5182</fullName>
                </value>
                <value>
                    <fullName>5183</fullName>
                </value>
                <value>
                    <fullName>5184</fullName>
                </value>
                <value>
                    <fullName>5185</fullName>
                </value>
                <value>
                    <fullName>5186</fullName>
                </value>
                <value>
                    <fullName>5187</fullName>
                </value>
                <value>
                    <fullName>5440</fullName>
                </value>
                <value>
                    <fullName>5441</fullName>
                </value>
                <value>
                    <fullName>5442</fullName>
                </value>
                <value>
                    <fullName>7110</fullName>
                </value>
                <value>
                    <fullName>7603</fullName>
                </value>
                <value>
                    <fullName>7605</fullName>
                </value>
                <value>
                    <fullName>5619</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTL_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this if the language is &quot;Right-To-Left&quot;</inlineHelpText>
        <label>RTL Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Freshener</fullName>
                </value>
                <value>
                    <fullName>Antipersp-Deodorant Gillette</fullName>
                </value>
                <value>
                    <fullName>Antiperspirant - Deodorant</fullName>
                </value>
                <value>
                    <fullName>AP-DO &amp; Body Spray</fullName>
                </value>
                <value>
                    <fullName>Auto Dishwashing</fullName>
                </value>
                <value>
                    <fullName>Baby Wipes</fullName>
                </value>
                <value>
                    <fullName>Beardtrimmer</fullName>
                </value>
                <value>
                    <fullName>Blade and Razor Disposable</fullName>
                </value>
                <value>
                    <fullName>Blade and Razor Double Edge</fullName>
                </value>
                <value>
                    <fullName>Blade and Razor Permanent System</fullName>
                </value>
                <value>
                    <fullName>Blade Disposable</fullName>
                </value>
                <value>
                    <fullName>Blade Double Edge</fullName>
                </value>
                <value>
                    <fullName>Blade Permanent System</fullName>
                </value>
                <value>
                    <fullName>Blood Pressure Appliance</fullName>
                </value>
                <value>
                    <fullName>Body Spray</fullName>
                </value>
                <value>
                    <fullName>Cat Food</fullName>
                </value>
                <value>
                    <fullName>Cleaning Systems</fullName>
                </value>
                <value>
                    <fullName>Coffee Machine</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Cough-Cold</fullName>
                </value>
                <value>
                    <fullName>Decongestant</fullName>
                </value>
                <value>
                    <fullName>Dental Floss Gillette</fullName>
                </value>
                <value>
                    <fullName>Dentifrice</fullName>
                </value>
                <value>
                    <fullName>Dentifrice Gillette</fullName>
                </value>
                <value>
                    <fullName>Diapers</fullName>
                </value>
                <value>
                    <fullName>Dog Food</fullName>
                </value>
                <value>
                    <fullName>Epilator</fullName>
                </value>
                <value>
                    <fullName>Eye Color Cosmetics</fullName>
                </value>
                <value>
                    <fullName>Fabric Enhancers</fullName>
                </value>
                <value>
                    <fullName>Fabric Fresheners</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Template Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template_Filename__c</fullName>
        <label>Template Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Conga Template</label>
    <listViews>
        <fullName>AA_Australia</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>APXTConga4__Description__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>HTML_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>Australia</value>
        </filters>
        <label>AA Australia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Indonesia</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>APXTConga4__Description__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>HTML_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>Indonesia</value>
        </filters>
        <label>AA Indonesia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Malaysia</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>APXTConga4__Description__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>HTML_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>Malaysia</value>
        </filters>
        <label>AA Malaysia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_New_Zealand</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>APXTConga4__Description__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>HTML_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>New Zealand</value>
        </filters>
        <label>AA New Zealand</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Philippines</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>APXTConga4__Description__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>HTML_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>Philippines</value>
        </filters>
        <label>AA Philippines</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Singapore</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>APXTConga4__Description__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>HTML_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>Singapore</value>
        </filters>
        <label>AA Singapore</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Thailand</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>APXTConga4__Description__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>HTML_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Thailand</value>
        </filters>
        <label>AA Thailand</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Vietnam</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>APXTConga4__Description__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Vietnam</value>
        </filters>
        <label>AA Vietnam</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APXTConga4__All</fullName>
        <columns>NAME</columns>
        <columns>Default_Template_Active__c</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>APXTConga4__Description__c</columns>
        <columns>Template_Filename__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>HTML_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APXTConga4__Name__c</field>
            <operation>contains</operation>
            <value>Gen-send replace</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASIA_China</fullName>
        <columns>Template_Active__c</columns>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Country__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>China</value>
        </filters>
        <filters>
            <field>Template_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ASIA - China</label>
        <language>en_US</language>
    </listViews>
</CustomObject>